--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
 		<span id="weather-icon">🌤️</span>
 		<span id="weather">--°C</span>
 		<span id="humidity">💧 --%</span>
-		<span id="date-icon">📅 </span>
+		<span id="date-icon">🗓 </span>
 		<span id="date">--/--/----</span>
-		<span id="time-icon">🕒 </span>
+		<span id="time-icon">🕐 </span>
 		<span id="time">--:--</span>
 	  </div>
 	</header>
@@ -91,4 +91,5 @@
   <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
+
 
