--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,10 @@
 		<span id="time-icon">🕐 </span>
 		<span id="time">--:--</span>
 	  </div>
+	  <div id="last-updated" style="margin-top: 10px; font-size: 0.9em; color: #ccc;">
+		<span>📊 Última atualização: </span>
+		<span id="last-updated-time">--:--:--</span>
+	  </div>
 	</header>
   <div id="loading-overlay">
     <div class="spinner"></div>
