--- a/templates/index.html
+++ b/templates/index.html
@@ -80,8 +80,8 @@
 			  <th>Instalação</th>
 			  <th>Potência Instalada (kWp)</th>
 			  <th>Produção (kW)</th>
-			  <th>Consumo (kW)</th>
-			  <th>Energia Injetada (kW)</th>			  
+			  <th>Consumo Total (kW)</th>
+			  <th>Consumo da Rede (kW)</th>			  
 			  <th>Excedente (kW)</th>
 			  <th>Status</th>
 			</tr>
